--- a/.htaccess
+++ b/.htaccess
@@ -7,3 +7,16 @@ RewriteRule ^(.+)$ $1.html [L,QSA]
 
 RewriteCond %{THE_REQUEST} ^[A-Z]{3,9}\ /.*\.html\ HTTP/
 RewriteRule ^(.*)\.html$ /$1 [R=301,L]
+
+ExpiresActive On
+ExpiresDefault A0
+
+# 1 WEEK - possible to be changed, unlikely
+<FilesMatch "\.(jpg|jpeg|png|gif|swf)$">
+ExpiresDefault A604800
+</FilesMatch>
+
+# 3 HOUR - core content, changes quickly
+<FilesMatch "\.(txt|xml|js|css)$">
+ExpiresDefault A10800
+</FilesMatch>
